--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@uniswap/liquidity-staker",
-  "version": "1.0.2",
-  "author": "Noah Zinsmeister",
+  "name": "@materia-dex/materia-contracts-liquidity-mining",
+  "version": "1.0.3",
+  "author": "materia",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/liquidity-staker"
+    "url": "git+https://github.com/materia-dex/materia-contracts-liquidity-mining.git"
   },
   "files": [
     "build"
@@ -24,9 +24,9 @@
     "openzeppelin-solidity-2.3.0": "npm:openzeppelin-solidity@2.3.0"
   },
   "devDependencies": {
+    "@materia-dex/materia-contracts-core": "^1.1.3",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
-    "@uniswap/v2-core": "^1.0.1",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
     "ethereumjs-util": "^7.0.5",
@@ -36,5 +36,15 @@
     "solc": "0.5.16",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
-  }
+  },
+  "description": "Forked from  [https://github.com/Synthetixio/synthetix/tree/v2.27.2/](https://github.com/Synthetixio/synthetix/tree/v2.27.2/)",
+  "bugs": {
+    "url": "https://github.com/materia-dex/materia-contracts-liquidity-mining/issues"
+  },
+  "homepage": "https://github.com/materia-dex/materia-contracts-liquidity-mining#readme",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "license": "ISC"
 }
